syntax = "proto3";

option go_package = "github.com/daffaromero/gorpc-template/api";

message Item {
  string id = 1;
  string name = 2;
  string description = 3;
}

message User {
  string id = 1;
  string name = 2;
  string password = 3;
}

message Order {
  string id = 1;
  string user_id = 2;
  repeated Item items = 3;
}

message Seller {
  string id = 1;
  string name = 2;
}

service ItemService {
  rpc CreateItem(CreateItemRequest) returns (CreateItemResponse);
  rpc GetItem(GetItemRequest) returns (GetItemResponse);
  rpc ListItems(ListItemsRequest) returns (ListItemsResponse);
  rpc UpdateItem(UpdateItemRequest) returns (UpdateItemResponse);
  rpc DeleteItem(DeleteItemRequest) returns (DeleteItemResponse);
}

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  rpc GetOrder(GetOrderRequest) returns (GetOrderResponse);
  rpc ListOrders(ListOrdersRequest) returns (ListOrdersResponse);
  rpc UpdateOrder(UpdateOrderRequest) returns (UpdateOrderResponse);
  rpc DeleteOrder(DeleteOrderRequest) returns (DeleteOrderResponse);
}

service SellerService {
  rpc CreateSeller(CreateSellerRequest) returns (CreateSellerResponse);
  rpc GetSeller(GetSellerRequest) returns (GetSellerResponse);
  rpc ListSellers(ListSellersRequest) returns (ListSellersResponse);
  rpc UpdateSeller(UpdateSellerRequest) returns (UpdateSellerResponse);
  rpc DeleteSeller(DeleteSellerRequest) returns (DeleteSellerResponse);
}

// Request and Response message definitions for ItemService
message CreateItemRequest {
  Item item = 1;
}

message CreateItemResponse {
  Item item = 1;
}

message GetItemRequest {
  string id = 1;
}

message GetItemResponse {
  Item item = 1;
}

message UpdateItemRequest {
  Item item = 1;
}

message UpdateItemResponse {
  Item item = 1;
}

message DeleteItemRequest {
  string id = 1;
}

message DeleteItemResponse {
  bool success = 1;
}

message ListItemsRequest {
  int32 page = 1;
  int32 page_size = 2;
}

message ListItemsResponse {
  repeated Item items = 1;
  int32 total_count = 2;
}

// Request and Response message definitions for UserService
message CreateUserRequest {
  User user = 1;
}

message CreateUserResponse {
  User user = 1;
}

message GetUserRequest {
  string id = 1;
}

message GetUserResponse {
  User user = 1;
}

message UpdateUserRequest {
  User user = 1;
}

message UpdateUserResponse {
  User user = 1;
}

message DeleteUserRequest {
  string id = 1;
}

message DeleteUserResponse {
  bool success = 1;
}

message ListUsersRequest {
  int32 page = 1;
  int32 page_size = 2;
}

message ListUsersResponse {
  repeated User users = 1;
  int32 total_count = 2;
}

message CreateOrderRequest {
  Order order = 1;
}

message CreateOrderResponse {
  Order order = 1;
}

message GetOrderRequest {
  string id = 1;
}

message GetOrderResponse {
  Order order = 1;
}

message UpdateOrderRequest {
  Order order = 1;
}

message UpdateOrderResponse {
  Order order = 1;
}

message DeleteOrderRequest {
  string id = 1;
}

message DeleteOrderResponse {
  bool success = 1;
}

message ListOrdersRequest {
  int32 page = 1;
  int32 page_size = 2;
}

message ListOrdersResponse {
  repeated Order orders = 1;
  int32 total_count = 2;
}

message CreateSellerRequest {
  Seller seller = 1;
}

message CreateSellerResponse {
  Seller seller = 1;
}

message GetSellerRequest {
  string id = 1;
}

message GetSellerResponse {
  Seller seller = 1;
}

message UpdateSellerRequest {
  Seller seller = 1;
}

message UpdateSellerResponse {
  Seller seller = 1;
}

message DeleteSellerRequest {
  string id = 1;
}

message DeleteSellerResponse {
  bool success = 1;
}

message ListSellersRequest {
  int32 page = 1;
  int32 page_size = 2;
}

message ListSellersResponse {
  repeated Seller sellers = 1;
  int32 total_count = 2;
}